Fixed footer and services page on tablet

--- a/css/index.css
+++ b/css/index.css
@@ -221,6 +221,12 @@ footer {
   flex-wrap: wrap;
   padding: 60px 0 0 0;
 }
+@media (max-width: 800px) {
+  footer {
+    height: 300px;
+    padding: 40px 0 0 0;
+  }
+}
 @media (max-width: 500px) {
   footer {
     height: 700px;
@@ -234,6 +240,11 @@ footer .form {
   width: 40%;
   padding-left: 85px;
 }
+@media (max-width: 800px) {
+  footer .form {
+    padding-left: 50px;
+  }
+}
 @media (max-width: 500px) {
   footer .form {
     width: 100%;
@@ -246,6 +257,11 @@ footer .form h3 {
   line-height: 2.4rem;
   color: #FFFFFF;
   padding-bottom: 5px;
+}
+@media (max-width: 800px) {
+  footer .form h3 {
+    padding-bottom: 10px;
+  }
 }
 footer .form p {
   font-weight: normal;
@@ -269,7 +285,7 @@ footer .form input {
   font-size: 1.6rem;
   line-height: 2.4rem;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   footer .form input {
     width: 90%;
   }
@@ -278,7 +294,7 @@ footer .addresses {
   display: flex;
   justify-content: space-between;
   width: 60%;
-  padding: 0 90px 0 10px;
+  padding: 0 50px 0 10px;
 }
 @media (max-width: 500px) {
   footer .addresses {
@@ -675,7 +691,7 @@ footer .copyright {
   width: 83%;
   padding-top: 50px;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .container-services .content-container {
     width: 90%;
   }
@@ -718,6 +734,11 @@ footer .copyright {
   background-color: #222222;
   color: #FFF;
 }
+@media (max-width: 800px) {
+  .container-services .content-container .tab-nav ul li {
+    width: 24%;
+  }
+}
 @media (max-width: 500px) {
   .container-services .content-container .tab-nav ul li {
     width: 48%;
@@ -740,6 +761,11 @@ footer .copyright {
 }
 .container-services .content-container .article-container .article .text {
   width: 50%;
+}
+@media (max-width: 800px) {
+  .container-services .content-container .article-container .article .text {
+    width: 50%;
+  }
 }
 @media (max-width: 500px) {
   .container-services .content-container .article-container .article .text {
@@ -764,6 +790,11 @@ footer .copyright {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 800px) {
+  .container-services .content-container .article-container .article .img {
+    width: 50%;
+  }
+}
 @media (max-width: 500px) {
   .container-services .content-container .article-container .article .img {
     width: 100%;
@@ -773,7 +804,7 @@ footer .copyright {
 .container-services .content-container .article-container .article .img .mobile {
   display: none;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .container-services .content-container .article-container .article .img .mobile {
     display: block;
   }
@@ -781,7 +812,7 @@ footer .copyright {
 .container-services .content-container .article-container .article .img .desktop {
   display: block;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .container-services .content-container .article-container .article .img .desktop {
     display: none;
   }
