--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,11 @@ footer {
     flex-wrap: wrap;
     padding: 60px 0 0 0;
 
+    @media @tablet {
+        height: 300px;
+        padding: 40px 0 0 0;
+    }
+
     @media @mobile {
         height: 700px;
         flex-direction: column;
@@ -20,6 +25,10 @@ footer {
         width: 40%;
         padding-left: 85px;
 
+        @media @tablet {
+            padding-left: 50px;
+        }
+
         @media @mobile {
             width: 100%;
             padding-left: 5%;
@@ -28,6 +37,10 @@ footer {
         h3 {
             .footer-heading;
             padding-bottom: 5px;
+
+            @media @tablet {
+                padding-bottom: 10px;
+            }
         }
 
         p {
@@ -47,7 +60,7 @@ footer {
             border-radius: 5px;
             .text;
 
-            @media @mobile{
+            @media @tablet{
                 width: 90%;
             }
         }
@@ -58,7 +71,7 @@ footer {
         display: flex;
         justify-content: space-between;
         width: 60%;
-        padding: 0 90px 0 10px;
+        padding: 0 50px 0 10px;
 
         @media @mobile {
             flex-direction: column;
