--- a/less/mixins.less
+++ b/less/mixins.less
@@ -83,6 +83,10 @@
         color: @tab-hover-color;
     }
 
+    @media @tablet {
+        width: 24%;
+    }
+
     @media @mobile {
         width: 48%;
         margin-bottom: 20px;
