--- a/less/variables.less
+++ b/less/variables.less
@@ -25,3 +25,4 @@
 // Mobile
 
 @mobile: (max-width: 500px);
+@tablet: (max-width: 800px);
